Completed "Add to cart" feature

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.4",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "sass": "^1.54.4"
   },
   "devDependencies": {
